feat: added athena query implementation
